[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["alexey <a556077@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.3.1"}
alembic = "^1.11.1"
sqlalchemy = "^2.0.17"
psycopg = "^3.1.9"
psycopg-binary = "^3.1.9"
python-dotenv = "^1.0.0"
pydantic = "1.10.9"
beautifulsoup4 = "^4.12.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "0.99"
fastapi-filter = "^0.6.1"
gunicorn = "^21.2.0"
pytest = "^7.4.0"
httpx = "^0.24.1"
sqlalchemy-utils = "^0.41.1"
psycopg2 = "^2.9.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
implicit_reexport = "True"
ignore_missing_imports = "True"

[tool.black]
line-length = 120
target-version = ['py310']

